[package]
name = "xid"
version = "1.0.0"
license = "MIT"
description = "Globally unique sortable id generator. A Rust port of https://github.com/rs/xid."
keywords = ["id"]
homepage = "https://github.com/kazk/xid-rs"
repository = "https://github.com/kazk/xid-rs"
readme = "README.md"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2018"
exclude = [".github/"]

[dependencies]
crc32fast = "^1"
hostname = "^0.3"
md5 = "^0.7"
once_cell = "^1"
rand = "^0.8"
thiserror = "^1"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "^0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "^0.8"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "xid_new"
harness = false

[[bench]]
name = "xid_new_to_string"
harness = false

[[bench]]
name = "xid_id_from_str"
harness = false
